Fix overflow issue of pokemon menu list

--- a/src/components/PokemonMap.css
+++ b/src/components/PokemonMap.css
@@ -7,7 +7,6 @@
   display: flex;
   gap: 10px;
   align-items: center;
-  flex-wrap: wrap;
 }
 
 #menu-circle-mark {
@@ -15,6 +14,7 @@
   border-radius: 100%;
   width: 12vw;
   height: 12vw;
+  position: relative;
 }
 .menu-pokemon-img {
   min-height: 10vw;
@@ -37,7 +37,6 @@
   padding: 10px;
   border-radius: 10px;
   border: 2px solid red;
-  z-index: 99999;
   overflow-y: scroll;
   overflow-x: hidden;
 }
